<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="ro.pub.cs.systems.eim.practicaltest01var03.PracticalTest01Var03MainActivity">

    <Button
        android:id="@+id/second_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/second_activity" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:columnCount="2"
        android:rowCount="2">

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/checkbox1" />

        <EditText
            android:id="@+id/first_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:ems="6"
            android:gravity="center"
            android:saveEnabled="false" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/checkbox2" />

        <EditText
            android:id="@+id/second_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="1"
            android:ems="6"
            android:gravity="center"
            android:saveEnabled="false" />
    </GridLayout>

    <Button
        android:id="@+id/display_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/display_info" />

    <EditText
        android:id="@+id/greeting_text_view"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:text="@string/display_text"
        android:gravity="left"
        android:saveEnabled="false"
        android:enabled = "false"/>

</LinearLayout>
